SERVER-8514 return error on invalid count query on empty collection

Closes #783

Signed-off-by: Benety Goh <benety@mongodb.com>